{
    "name": "RunerInputAction",
    "maps": [
        {
            "name": "Gameplay",
            "id": "4eb5a8b1-a331-4aa5-83e7-02c9ead667e7",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "37fcf7d8-6bf0-4d99-b614-e58fe22e42a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "c06418f4-7b5a-4df2-b08b-2a6277139a37",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartDag",
                    "type": "PassThrough",
                    "id": "71d33781-9271-4773-85b5-a701567e2b25",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "EndDag",
                    "type": "PassThrough",
                    "id": "38720a73-6fa5-4456-bbba-0299310668f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a1375b74-d7d9-4c8a-90f6-c66bc6a40161",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccfd5010-7a12-4b0a-a61d-043cf71f0d61",
                    "path": "<Touchscreen>/touch*/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70e54e20-2290-4d8b-88fa-17dd8bbfe50b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bbb6ebb-5d94-4045-9def-e00f97965d18",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fa4d19e-dad4-4bb6-81d9-f2aa9e5c7db8",
                    "path": "<Touchscreen>/touch*/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "StartDag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe76b00b-f0f3-4351-8341-af7720f6efc4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "StartDag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0801a4a-8ba8-4bf8-8ffa-e8fd391eebed",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "EndDag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6555bc73-5c48-410c-a651-b258b072d192",
                    "path": "<Touchscreen>/touch*/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "EndDag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Computer",
            "bindingGroup": "Computer",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}